--- a/requirements.txt
+++ b/requirements.txt
@@ -30,11 +30,11 @@ nbformat==5.10.4
 
 # ML fairness and visualization
 aequitas==1.0.0
-altair==4.1.0
+altair==5.2.0
 
 # Flask and extensions (for aequitas)
 Flask==3.1.2
-Flask-Bootstrap==3.3.7.1
+Flask-Bootstrap4==4.0.2
 
 # Other utilities
 python-multipart==0.0.20
