--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false   # If Python 3.13 fails, allow Python 3.11 to finish
       matrix:
-        python-version: ["3.11", "3.13"]
+        python-version: ["3.12.7"]
 
     steps:
       - name: Checkout Repository
