--- a/requirements.txt
+++ b/requirements.txt
@@ -17,11 +17,11 @@ httpx==0.28.1
 requests==2.32.5
 
 # Data science libraries
-pandas==2.3.2
+pandas>=2.0.0
 numpy<2
-matplotlib==3.10.6
-seaborn==0.13.2
-scikit-learn==1.7.2
+matplotlib>=3.8.0
+seaborn>=0.13.2
+scikit-learn>=1.5.0
 
 # Jupyter support
 jupyter==1.1.1
@@ -30,11 +30,11 @@ nbformat==5.10.4
 
 # ML fairness and visualization
 aequitas==1.0.0
-altair==5.2.0
+altair==5.4.0
 
 # Flask and extensions (for aequitas)
-Flask==3.1.2
-Flask-Bootstrap4==4.0.2
+Flask>=3.0.0
+Flask-Bootstrap4>=4.0.2
 
 # Other utilities
 python-multipart==0.0.20
